# EMT6-Ro

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  LICENSE  README.md  number_of_protocols.py  protocols_3007.txt  ref-protocols.csv  results_cpu_3007.txt  run_sims.py
GA/: emt6ro_model.py
cmake/: CollectSources.cmake
data/: default-parameters.json  test_tumor.txt
data/test/: dummy-parameters.json
data/tumor-lib/: tumor-10.txt  tumor-2.txt  tumor-3.txt  tumor-4.txt  tumor-5.txt  tumor-6.txt  tumor-7.txt  tumor-8.txt  tumor-9.txt
docs/: NCU_FINDINGS.md  PERF_EXPERIMENT_PLAYBOOK.md  PERF_HANDOFF.md  PERF_PLAYBOOK.md
doxygen/: Doxyfile
example/: CMakeLists.txt  example.py  main.cc  timelapse.cc
example/GA/: ga_example.py
python/: CMakeLists.txt  MANIFEST.in  py_emt6ro.cc  setup.py
python/emt6ro/: __init__.py
python/emt6ro/simulation/: CMakeLists.txt  __init__.py  backend.cc
python_ga/: crossover.py  example_run.py  example_run_evaluate_protocol.py  example_run_model.py  genetic_algorithm.py  genetic_algorithm_for_evaluation.py  metrics.py  mutation.py  results_visualization.ipynb  selection.py  test_convergence.py  utils.py
python_ga/evaluate_fixed_interval_protocols/: fixed_11h_interval.json  fixed_12h_interval.json  fixed_13h_interval.json  fixed_14h_interval.json  fixed_15h_interval.json  fixed_16h_interval.json  fixed_17h_interval.json  fixed_18h_interval.json  fixed_19h_interval.json  fixed_20h_interval.json  fixed_21h_interval.json  fixed_22h_interval.json  standard_run_configuration.yaml
python_ga/evaluate_otsuka_2011_protocols/: otsuka_2x11Gy.yaml  otsuka_2x13Gy.yaml  otsuka_2x9Gy.yaml
python_ga/experiment_config/: base__tournament__dose_value_time_value.yaml
python_ga/experiments_grid_search/: grid_search__roulette_selection__cross_one_point__mutate_merge_split.yaml  grid_search__roulette_selection__cross_one_point__mutate_merge_split_swap.yaml  grid_search__roulette_selection__cross_one_point__mutate_time_dose.yaml  grid_search__roulette_selection__cross_two_points__mutate_merge_split.yaml  grid_search__roulette_selection__cross_two_points__mutate_merge_split_swap.yaml  grid_search__roulette_selection__cross_two_points__mutate_time_dose.yaml  grid_search__roulette_selection__normalized_crossover__mutate_merge_split.yaml  grid_search__roulette_selection__normalized_crossover__mutate_merge_split_swap.yaml  grid_search__roulette_selection__normalized_crossover__mutate_time_dose.yaml  grid_search__simple_selection__cross_one_point__mutate_merge_split.yaml  grid_search__simple_selection__cross_one_point__mutate_merge_split_swap.yaml  grid_search__simple_selection__cross_one_point__mutate_time_dose.yaml  grid_search__simple_selection__cross_two_points__mutate_merge_split.yaml  grid_search__simple_selection__cross_two_points__mutate_merge_split_swap.yaml  grid_search__simple_selection__cross_two_points__mutate_time_dose.yaml  grid_search__simple_selection__normalized_crossover__mutate_merge_split.yaml  grid_search__simple_selection__normalized_crossover__mutate_merge_split_swap.yaml  grid_search__simple_selection__normalized_crossover__mutate_time_dose.yaml  grid_search__tournament_selection_classic__cross_one_point__mutate_merge_split.yaml  grid_search__tournament_selection_classic__cross_one_point__mutate_merge_split_swap.yaml  grid_search__tournament_selection_classic__cross_one_point__mutate_time_dose.yaml  grid_search__tournament_selection_classic__cross_two_points__mutate_merge_split.yaml  grid_search__tournament_selection_classic__cross_two_points__mutate_merge_split_swap.yaml  grid_search__tournament_selection_classic__cross_two_points__mutate_time_dose.yaml  grid_search__tournament_selection_classic__normalized_crossover__mutate_merge_split.yaml  grid_search__tournament_selection_classic__normalized_crossover__mutate_merge_split_swap.yaml  grid_search__tournament_selection_classic__normalized_crossover__mutate_time_dose.yaml  grid_search__tournament_selection_tuned__cross_one_point__mutate_merge_split.yaml  grid_search__tournament_selection_tuned__cross_one_point__mutate_merge_split_swap.yaml  grid_search__tournament_selection_tuned__cross_one_point__mutate_time_dose.yaml  grid_search__tournament_selection_tuned__cross_two_points__mutate_merge_split.yaml  grid_search__tournament_selection_tuned__cross_two_points__mutate_merge_split_swap.yaml  grid_search__tournament_selection_tuned__cross_two_points__mutate_time_dose.yaml  grid_search__tournament_selection_tuned__normalized_crossover__mutate_merge_split.yaml  (+2 more)
simulation_analysis/: 1tumor-1protocol-results.json  results-comparison.ipynb  results-cpu-random.txt  results-gpu-random.txt
src/: CMakeLists.txt
src/bench/: CMakeLists.txt  main-bench.cc
src/emt6ro/: CMakeLists.txt
src/emt6ro/cell/: cell-metabolise-test.cc  cell-progress-clock-test.cc  cell-update-state-test.cc  cell.cu  cell.h
src/emt6ro/common/: cuda-utils-test.cu  cuda-utils.h  debug.h  device-array-test.cu  device-buffer-test.cu  device-buffer.h  error.h  grid.cu  grid.h  instr.cu  instr.h  memory-test.cu  memory.h  protocol.h  random-engine-test.cu  random-engine.cc  random-engine.cu  random-engine.h  stack.cuh  substrates.h
src/emt6ro/diffusion/: CMakeLists.txt  diffusion.cu  diffusion.h  diffustion-test.cu  grid-diffusion.cu  grid-diffusion.h  new-diffusion.cu  new-diffusion.h  old-diffusion.cc  old-diffusion.h
src/emt6ro/division/: cell-division-tests.cu  cell-division.cu  cell-division.h
src/emt6ro/parameters/: parameters-test.cc  parameters.cc  parameters.h
src/emt6ro/simulation/: cell-division.h  simulation.cu  simulation.h
src/emt6ro/site/: site.h
src/emt6ro/state/: state.cc  state.h
src/emt6ro/statistics/: statistics.cu  statistics.h
src/tests/: CMakeLists.txt  main-test.cc  params-for-test.cc  params-for-test.h
timelapse/: timelapse-compare.ipynb
tools/: convert_protocols.py  convert_state.py  cpplint.py  perf_baseline.py  profile_ncu.sh  profile_nsys.sh  run_protocols_gpu.py  test_convert_state_txt.py
verification/: CMakeLists.txt  verification.cc
(+247 files in other folders)
